--- a/survey.html
+++ b/survey.html
@@ -14,7 +14,7 @@
 				<span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
 			{% endif %}
 				</h2>
-			<div class="" data-readmore-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}">{% include_tmpl form.introduction_text %}</div>
+			<div class="" data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}">{% include_tmpl form.introduction_text %}</div>
 		</div>
 		{% include "./social_plugins.html" %}
 	</div>
