--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -37,7 +37,7 @@
 		{% if page.custom_fields.page_layout_style == "expanded" %}
 		</div>
 		{% endif %}			
-<div id="action-description" class="text-large margin-top-none margin-bottom-huge" data-readmore-after="10">
+<div id="action-description" class="text-large margin-top-none margin-bottom-huge" data-read-more-after="10">
 		{% autoescape off %}
 			{% include_tmpl form.introduction_text %}
 		{% endautoescape %}
