--- a/user_form.html
+++ b/user_form.html
@@ -1,23 +1,24 @@
-{% load actionkit_tags smartif switchcase %}{% filter remove_blank_lines %}
+{% load actionkit_tags smartif switchcase %}
+{% filter remove_blank_lines %}
 
 {% comment %}
 
   To change which fields show, edit {% hide_by_default %} below and set
-  individual pages' required fields in the page admin, or activate the 
+  individual pages' required fields in the page admin, or activate the
   User Fields customization option in the page admin to override which
   fields are visible and the order they're shown in.
-  
+
   Unhide or require the 'country' field to make the form international. To
   geolocate more users outside the United States, unhide/require 'city'.
-  
+
   You can change label text in the language admin, change {% field_order %}
   below, edit the CSS, or replace this form entirely with static HTML. See
   the advanced template ref for more:
-  
+
   https://roboticdogs.actionkit.com/docs/manual/guide/advanced_templates.html
 
   name email prefix first_name middle_name last_name suffix country address1 address2 city state zip region postal phone
-  
+
   Enjoy!
 
 {% endcomment %}
@@ -32,7 +33,7 @@
 		<label for="id_{{ field.field_name }}">{{ field.label_text }}</label>
 		{% include "./country_select.html" %}
 	</div>
-	{% case 'state' %} 
+	{% case 'state' %}
 	<div id="id_{{ field.field_name }}_box" class="input-select ak-input-type-{{ field.type }} {% if field.field_name|is_in:context.required %}required{% endif %}">
 		<label for="id_{{ field.field_name }}">{{ field.label_text }}</label>
 		{% include "./state_select.html" %}
@@ -47,7 +48,7 @@
 
 <div class="honey" style="display: none">
   <input name="action_honey">
-</div>	
+</div>
 
 {% if 'country'|is_in:fields %}
   <input type="hidden" name="auto_country" value="1">
@@ -62,7 +63,7 @@
 {% endfilter %}
 
 {% if page.custom_fields.form_include_phone %}
-<div class="input phone">    
+<div class="input phone">
 <label for="id_phone">{% filter ak_text:"field_phone"|capfirst %}Phone{% endfilter %}</label><input class="phone" id="id_phone" type="text" name="phone"/>
 </div>
 {% endif %}
@@ -94,5 +95,5 @@ $("#partner-share").addClass("appended").insertBefore("#form input.submit");
 	</label>
 </div>
 {% else %}
-<input name="lists" value="{{ page.list.id }}" type="hidden"/> 
+<input name="lists" value="{{ page.list.id }}" type="hidden"/>
 {% endif %}
