--- a/call.html
+++ b/call.html
@@ -5,12 +5,12 @@
 	<div class="section-inner">
 		<div id="action-header" class="">
 			<h1 id="action-title" class="title3">{{ page.title }}</h1>
-			<div class="" data-readmore-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}">{% include_tmpl form.introduction_text %}</div>
+			<div class="" data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}">{% include_tmpl form.introduction_text %}</div>
 		</div>
-		{% include "./social_plugins.html" %}	
+		{% include "./social_plugins.html" %}
 	</div>
 </section>
-	
+
 {% if page.custom_fields.page_is_inactive %}
 <div id="page-inactive">
 {% autoescape off %}
@@ -28,14 +28,14 @@
 		<script type="text/ak-template" for="ak-need-contact-info">
 			[% if (incomplete) { %]
 				<div class="c6 ct10 cm10 left2 bg-dkgray-trans box box-big">
-					<p class="strong text-large icon-before icon-faded" data-icon="&#xE908;">{% filter ak_text:"call_needs_contact_info" %}Enter your information below and we'll look up the phone number for you to call.{% endfilter %}</p>
+					<p class="strong text-large icon-before icon-faded" data-icon="&#xE908;">{% filter ak_text:"call_needs_contact_info" %}Enter your information below and we&lsquo;ll look up the phone number for you to call.{% endfilter %}</p>
 				</div>
 			[% } %]
 		</script>
 		<div id="who_called"></div>
 		<script type="text/ak-template" for="who_called">
 			[% if (!incomplete) { %]
-				{% for target in context.targets.targets %} 
+				{% for target in context.targets.targets %}
 				<div class="call-target margin-bottom-medium">
 					<p class="text-large3 strong"><span class="target-label-before">{% filter ak_text:"call_target_label_before" %}Call {% endfilter %}</span><span class="target-label-name">{{ target.title_full }}</span><span class="target-label-after">{% filter ak_text:"call_target_label_after" %}:{% endfilter %}</span></p>
 					<div class="text-large"><p class="title0 text-font-display icon-before icon-faded icon-small margin-bottom-none" data-icon="&#xE908;"><span class="bg-dkgray-trans highlight">{{ target.phone }}</span></p></div>
@@ -73,7 +73,7 @@
                         {% endautoescape %}
                         <textarea id="id_action_survey" name="action_survey" class=""></textarea>
                         </div>
-                      
+
                 [% } %]
             </script>
             {% endif %}
@@ -81,7 +81,7 @@
 			{% if page.custom_fields.form_additional_fields %}
 				<div class="form-additional-html">
 					{{ page.custom_fields.form_additional_fields }}
-				</div>	
+				</div>
 			{% endif %}
 			<div id="call-submit" class="input-submit"></div>
 			<script type="text/ak-template" for="call-submit">
@@ -108,4 +108,3 @@
 {% block script_additions %}
 
 {% endblock %}
-		
