--- a/event_search.html
+++ b/event_search.html
@@ -1,61 +1,156 @@
-{% extends "./wrapper.html" %}{% load actionkit_tags smartif %}
-{% block content %}<link rel="stylesheet" href="https://s3.amazonaws.com/s3.350.org/images/event-styles-2013.css" type="text/css" />
-<div id="page-header">
-<h2 id="page-title">{{ page.title }}</h2>
-</div>
-<div id="content" class="event-search">
+{% extends "./wrapper.html" %}
+{% load actionkit_tags smartif %}
+{% block content %}
+<!--
+<link rel="stylesheet" href="https://s3.amazonaws.com/s3.350.org/images/event-styles-2013.css" type="text/css" />
+-->
+<style>
+#page-header{
+  margin-bottom:-3em;}
+#event-search-box{
+  border-radius:0;
+  padding:0.6em;}
+#event-search-box label{
+  background:#fff;
+  display:block;
+  font-size:0.8rem;
+  padding:0.4em 0.6em 0;}
+#event-search-postal-wrapper,
+#event-search-country-wrapper,
+#event-search-submit{
+  text-align:left;}
+#event-search-postal-wrapper input,
+#event-search-country-wrapper select{
+  border-width:0;
+  font-size:1.3rem;
+  height:45px;
+  padding:0.2em 0.5em 0.4em;}
+#event-search-postal-wrapper input:focus,
+#event-search-country-wrapper select:focus{
+  box-shadow:0 2px 0 #0f81e8;
+  outline:none;}
+#event-search-submit{
+  border-radius:3px;
+  font-size:1.1rem;
+  height:55px;
+  text-align:center;
+  width:100%;}
+#event-list{
+  padding:0;}
+#event-search-results-wrapper{
+  padding:2.5em 1.3em;}
+a.area-link.event-link:hover {
+  box-shadow: 0 0 0 20px rgba(0,0,0,0.05);
+  background: rgba(0,0,0,0.05);}
+#event-map{
+  height:300px;
+  max-height:60vh;
+  position:relative;}
+#map_canvas{
+  height:100%;}
+#event-search-postal-wrapper input{
+}
+#event-search-country-wrapper select{
+}
+@media screen and (min-width:900px){
 
+  #page-header{
+    margin-bottom:-4em;}
+  #event-search-form{
+    font-size:0;}
+  #event-search-postal-wrapper,
+  #event-search-country-wrapper,
+  #event-search-submit{
+    display:inline-block;
+    vertical-align:text-top;}
+  #event-search-postal-wrapper{
+    width:50%;}
+  #event-search-country-wrapper{
+    margin-left:1%;
+    width:29%;}
+  #event-search-postal-wrapper input,
+  #event-search-country-wrapper select{
+    margin-bottom:0;}
+  #event-search-submit{
+    height:72px;
+    margin-left:1%;
+    width:19%;}
 
-<!-- no class=ak-form because we don't need to wait for context to show this -->
+  #event-search-results-wrapper{
+    padding:3em;}
 
-<div id="event-map">
-      <div id="map_canvas"></div>
-</div>
+  #event-map{
+    height:calc(100vh - 110px);
+    max-height:100vh;
+    padding:3em 3em 3em 0;}
+  .is-sticky #event-map{
+    width:40% !important;}
 
-<div id="event-search-results">
-{% if args.page %}
-{% include "./event_search_results.html" %}
+}
+</style>
+<div id="page-header" class="section width-normal padding-large text-center bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+  <div class="section-inner">
+{% if page.custom_fields.page_pretitle %}
+    <p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
 {% endif %}
-</div>
-
-{{ form.search_page_text|safe }}
-</div>
-
-
-<form name="act" class="ak-form" method="GET" action="" accept-charset="utf-8" onsubmit="actionkit.forms.eventSearch(this); return false;">
-<div id="form" class="ak-labels-overlaid">
-{% if page.custom_fields.form_text_above_form %}
-{{ page.custom_fields.form_text_above_form }}
+    <h2 id="action-title" class="text-style-title-large title3">
+{% if page.custom_fields.page_title_custom_html %}
+  {% autoescape off %} {{ page.custom_fields.page_title_custom_html }} {% endautoescape %}
 {% else %}
-<h5>{% filter ak_text:"event_search_form_instructions" %}Find an event near you:{% endfilter %}</h5>
+      <span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
 {% endif %}
-<input type="hidden" name="page" value="{{ page.name }}">
-<input type="hidden" name="template" value="event_search.html">
-<input type="hidden" name="akid" value="{{ args.akid }}">
-<input type="hidden" name="distance" value="100">
-<input type="hidden" name="limit" value="10">
+    </h2>
+    <div class="text-style-lead2 text-large2 margin-bottom-huge" data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}1{% endif %}">
+      {{ form.search_page_text|safe }}
+    </div>
 
-<div class="input text zip">
-<label for="id_zip" class="search-zip">{% filter ak_text:"event_search_label_search" %}City/ZIP/Postal &amp; Country{% endfilter %}</label>
-<input id="id_zip" class="search-zip" type="text" name="zip" value={{args.zip}}>
-</div>
-<ul class="compact" id="ak-errors"></ul>
-<input type="submit" class="submit" value="{% filter ak_text:"event_search_label_submit" %}Find an Event{% endfilter %}">
+  </div>
 </div>
 
 
-<div id="form-sm" class="sm presign">
-{% if page.custom_fields.page_is_c4 %}{% else %}
-<a class="fb-share" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={% if page.custom_fields.fb_share_url %}{{ page.custom_fields.fb_share_url }}{% else %}{{ page.canonical_url }}{% endif %}?source=fb-AK">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</a>{% endif %}<a class="tw-share" target="_blank" href="http://twitter.com/home?status={{ page.custom_fields.tweet_content|escape}}">{% filter ak_text:"general_tweet" %}Tweet{% endfilter %}</a>
-{% if page.custom_fields.page_is_c4 %}{% else %}
-<div class="page-link">
-<span class="page-link-label" onClick="SelectAll('page-link-url')">{% filter ak_text:"general_share_link" %}Link:{% endfilter %}</span><input onClick="SelectAll('page-link-url')" id="page-link-url" type="text" class="page-link-url" value="{{ page.canonical_url }}"/>
-</div>
+<div id="event-list" class="section bg-white notch width-full padding-none">
+  <div class="section-inner">
+    <div id="event-search-results-wrapper" class="c6 ct10 cm10 no-margin margin-none padding-medium">
+{% if page.custom_fields.form_text_above_form %}
+  {{ page.custom_fields.form_text_above_form }}
+{% else %}
+      <h3 class="meta margin-bottom-normal opacity-50">{% filter ak_text:"event_search_form_instructions" %}Find an event near you:{% endfilter %}</h3>
 {% endif %}
+      <div id="event-search-box" class="bg-ltgray margin-bottom-large">
+        <form name="act" id="event-search-form" class="ak-form" method="GET" action="" accept-charset="utf-8" onsubmit="actionkit.forms.eventSearch(this); return false;">
+          <input type="hidden" name="page" value="{{ page.name }}">
+          <input type="hidden" name="template" value="event_search.html">
+          <input type="hidden" name="akid" value="{{ args.akid }}">
+          <input type="hidden" name="distance" value="100">
+          <input type="hidden" name="limit" value="10">
+          <input type="hidden" name="event_search_on_load" value="1">
+          <div id="event-search-postal-wrapper" class="input-wrapper input-text">
+            <label for="id_place" class="text-caps text-strong text-blue">{% filter ak_text:"event_search_label_search" %}City/Postal{% endfilter %}</label>
+            <input id="id_place" class="" type="text" name="place" value="{% if args.place %}{{args.place}}{% else %}{{args.zip}}{% endif %}" placeholder="{% filter ak_text:'event_search_form_placeholder' %}Search by city or postal code...{% endfilter %}">
+          </div>
+      {% if form.templateset.is_intl %}
+          <div id="event-search-country-wrapper" class="input-wrapper input-select input-country">
+            <label for="id_country" class="text-caps text-strong text-blue">{% filter ak_text:"field_country" %}Country{% endfilter %}</label>
+            {% include "./country_select.html" %}
+          </div>
+      {% endif %}
+          <button type="submit" id="event-search-submit" class="ak-event-search text-caps button bg-teal">{% filter ak_text:'event_search_label_submit' %}Search{% endfilter %}</button>
+          <ul class="compact hidden" id="ak-errors"></ul>
+        </form>
+      </div>
 
-</form>
-
+      <div class="event-search-results">
+{% if args.page %}
+    {% include "./event_search_results.html" %}
+{% endif %}
+      </div>
+    </div>
+    <div id="event-map" class="c4 ct10 cm10 margin-none no-margin js-sticky">
+      <div id="map_canvas"></div>
+    </div>
+  </div>
 </div>
+{% include "./social_plugins.html" %}
 {% endblock %}
 
 {% block tail_js %}
@@ -106,7 +201,7 @@ function loadMap(events) {
 		if( event.starts_at ) {
           dt = moment(event.starts_at, moment.ISO_8601);
 		} else {
-		  dt = moment(event.event_date + " " + event.start_time, "YYYY-MM-DD HH:mm:ss");	
+		  dt = moment(event.event_date + " " + event.start_time, "YYYY-MM-DD HH:mm:ss");
 		}
 
 if ( moment(dt).isAfter(now) ) {
@@ -118,7 +213,7 @@ if ( moment(dt).isAfter(now) ) {
         var formattedTime = {% if campaign.name == "changes-everything-screening" %}moment(dt).format("dddd, MMMM D YYYY"){% else %}moment(dt).format("dddd, MMMM D YYYY, h:mma"){% endif %};
 	    var info;
 	    if( event.rsvp_url && event.rsvp_url.match(/^https:\/\/secure.avaaz.org\//) ) {
-          info = "<div class='map-event-info-metadata'><b><a target='_blank' href='" + event.rsvp_url + "'>" + event.name + "</a></b><br/>" + event.venue + "<br/><span class='start-time'>" + formattedTime + "</span></div>";			
+          info = "<div class='map-event-info-metadata'><b><a target='_blank' href='" + event.rsvp_url + "'>" + event.name + "</a></b><br/>" + event.venue + "<br/><span class='start-time'>" + formattedTime + "</span></div>";
 		} else {
 		  var rsvp_url = event.rsvp_url || "http://act.350.org/event/{{ campaign.local_name }}/" + event.event_id + "/";
           info = "<div class='map-event-info-metadata'><b><a target='_blank' href='"+rsvp_url+"'>" + event.title + "</a></b><br/>" + event.venue + "<br/>{% if campaign.name != "commbank-under-new-management" and campaign.name != "CBA_Week_of_Action" %}<span class='start-time'>" + formattedTime + "</span>{% endif %}";
@@ -128,7 +223,7 @@ if ( moment(dt).isAfter(now) ) {
 			    info += "</div>";
 			}
 		}
-	
+
         if( 0 && event.public_description ) {
             info += "<p>" + event.public_description + "</p>";
         }
@@ -216,7 +311,7 @@ function initData(geocoded_events, offsite_events) {
   if( offsite_events.length ) {
     window.mapEvents.push.apply(window.mapEvents, offsite_events);
   }
-	
+
   for( var i=0; i<window.mapEvents.length; ++i ) {
     var event_id = window.mapEvents[i].event_id;
     if( geocoded_events[event_id] ) {
@@ -228,20 +323,14 @@ function initData(geocoded_events, offsite_events) {
 console.log('initData called.');
 };
 
-{% if campaign.name != "peoples_climate" and campaign.name != "changes-everything-screening" %}	
-initData({}, []);
-{% else %}
-//window.setTimeout(function() { console && console.log("fallback!"); initData({}, []); }, 3000);			  
-{% endif %}		
-
-var $sel = function(selector) { 
-    if ( actionkit.multiForms && actionkit.form ) 
+var $sel = function(selector) {
+    if ( actionkit.multiForms && actionkit.form )
         return $(actionkit.form).find(selector);
     return $(selector);
 };
 
 var featured_events = [], featured_events_ready = false, featured_events_highlighted = false;
-function getFeaturedEventsFromSpreadsheet(data) { 
+function getFeaturedEventsFromSpreadsheet(data) {
   for( var i=0; i<data.length; ++i ) {
     if( parseInt(data[i].eventid) ) {
       featured_events.push(parseInt(data[i].eventid));
@@ -277,7 +366,7 @@ function highlightFeaturedEvents(el) {
       var insertBefore = parent.find("li:first");
 
       $(event).css("background-color", "yellow").addClass("featuredEvent");
-      if( insertBefore.data("event_id") != $(event).data("event_id") ) { 
+      if( insertBefore.data("event_id") != $(event).data("event_id") ) {
         $(event).insertBefore(insertBefore);
       }
     }
@@ -304,32 +393,7 @@ function fitMapToEvents(el) {
   gmap.fitBounds(fitBounds);
   if( gmap.getZoom() > 17 ) { gmap.setZoom(17); }
 }
-	
-mergeNearbyAvaazEvents = function(data) {
-    var unit = $("#event-search-results .event-distance, .event-search-results .event-distance").first().text().match(/km/) ? "km" : "mi";	
-	var avaaz_urls = [];
-	for( var i=0; i < window.map_markers.length; ++i ) {
-      if( typeof map_markers[i].data.data.rsvp_url	=== "string" ) {
-	    avaaz_urls.push(map_markers[i].data.data.rsvp_url);			  
-	  }			  
-	}				  
-    var avaaz = data.events;
-	for( var i = 0; i < avaaz.length; ++i ) {
-		var ev = avaaz[i];
-		if( avaaz_urls.indexOf(ev.rsvp_url) === -1 ) {
-		  continue;	
-	    }
-		var time = moment(ev.event_date + " " + ev.start_time, "YYYY-MM-DD HH:mm:ss");
-		time = time.format("dddd, MMMM D YYYY, h:mmA");
-		var tmpl = '<div class="event-info"><div class="event-title"><a class="event-link" href="' + ev.rsvp_url + '">' + ev.name + '</a></div>';
-		{% if campaign.name != "CBA_Week_of_Action" %}tmpl += '<span class="event-time">' + time + ' </span>';{% endif %}
-		tmpl += '<span class="event-venue">' + ev.venue + '</span><span class="event-location"><div class="event-address1">' + ev.address + '</div></span><span class="event-distance">' + Math.round(ev.distance) + ' ' + unit + '</span></div><span class="event-description"><p>' + '' + '</p></span>';
-		$("<li>").addClass("event").html(tmpl).appendTo('ul#event_search_results_event_list');
-	}
-	var parent = $("#event-search-results ul");
-	$("#event-search-results li").sort(function(a, b) { var aa = parseFloat($(a).find(".event-distance").text().split(" ")[0]); var bb = parseFloat($(b).find(".event-distance").text().split(" ")[0]); if ( aa > bb ) return 1; if( bb > aa ) return -1; return 0; }).detach().appendTo(parent);
-};
-	
+
 actionkit.forms.onEventSearchResults = function(html) {
   try {
     var el = $("<div>").html(html);
@@ -341,22 +405,7 @@ actionkit.forms.onEventSearchResults = function(html) {
   } finally {
     $sel('#event-search-results, .event-search-results').html(html);
   }
-  {% if campaign.name == "peoples_climate" %}
-  var lat = gmap.getCenter().lat(), lng = gmap.getCenter().lng();
-  var unit = $("#event-search-results .event-distance, .event-search-results .event-distance").first().text().match(/km/) ? "km" : "mi";	
-  $("<script>").attr("type", "text/javascript").attr("src", "https://secure.avaaz.org/act/events.php?resource=event&action=getNearbyEvents&lat="+lat+"&lng="+lng+"&range=100&unit="+unit+"&calendar_id=2&jsonp=mergeNearbyAvaazEvents").appendTo("body");
-  {% endif %}
 };
 </script>
-{% if campaign.name == "peoples_climate" %}
-<script type="application/javascript" src="//350dotorg.github.io/megamap-data/avaaz-peoples-climate.js"></script>
-{% endif %}
-{% if campaign.name == "changes-everything-screening" %}
-<script type="application/javascript" src="//350dotorg.github.io/megamap-data/tce-events.js"></script>
-{% endif %}
-<style type="text/css">
-#map_canvas{ margin-bottom:15px; width:500px; height:270px;}
-#map_canvas img { max-width: none; }
-</style>
 
 {% endblock %}
