--- a/event_search_results.html
+++ b/event_search_results.html
@@ -1,112 +1,107 @@
-{% load actionkit_tags smartif %}{% filter collapse_spaces %}
+{% load actionkit_tags smartif %}
+{% filter collapse_spaces %}
+
 {% comment %}
 This file is so long because you can choose whether your campaign uses
-event titles, venues, etc., and different choices produce different HTML.  
-
+event titles, venues, etc., and different choices produce different HTML.
 {% endcomment %}
 
 {% if events|is_defined %}
 <input type="hidden" id="id_have_events" name="have_events" value="1">
-{% if not events|length %}
+	{% if not events|length %}
 <div id="no-events-found">
-<h4>{% filter ak_text:"event_search_no_events_found" %}Sorry, we didn't find any events near the location you entered. You can try searching again by using a larger nearby city, or by navigating to a nearby event using the map below.{% endfilter %}</h4>
-{% autoescape off %}
-{% if page.custom_fields.no_events_found_msg %}
-<div class="notice">{{page.custom_fields.no_events_found_msg }}</div>
-{% endif %}
-{% endautoescape %}
+	<h4>{% filter ak_text:"event_search_no_events_found" %}Sorry, we didn't find any events near the location you entered. You can try searching again by using a larger nearby city, or by navigating to a nearby event using the map below.{% endfilter %}</h4>
+		{% autoescape off %}
+			{% if page.custom_fields.no_events_found_msg %}
+	<div class="notice">{{page.custom_fields.no_events_found_msg }}</div>
+			{% endif %}
+		{% endautoescape %}
 </div>
-{% else %}
+	{% else %}
 
-{% if campaign.show_address1 and not hide_map %}
+		{% if campaign.show_address1 and not hide_map %}
 <!-- div id="map">
     <img src="http://maps.google.com/maps/api/staticmap?sensor=false&size=300x300&markers={% for event in events %}{{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}{% if not forloop.last %}|{% endif %}{% endfor %}" width="300" height="300" />
 </div -->
-{% endif %}
-<ul id="event_search_results_event_list" class="events">
-{% if args.zip %}
-	<h6>{% filter ak_text:"event_search_results_zip" %}Events found near:{% endfilter %} {{args.zip}}:</h6>
-{% endif %}
-{% for event in events %}
-	<li data-event_id="{{ event.id }}" class="event"> 
-	<script type="text/javascript">
-	$(document).ready(function(){
-	$(".event-signup a.event").removeAttr('href').click(function(e){
-	e.preventDefault();
-	});
-	});
-	</script>
-		<div class="event-info">
-		{% if campaign.use_title and campaign.show_title %}
-			<div class="event-title">
-				<a class="event-link" href="/event/{{ campaign.local_name }}/{{event.id}}/signup/?akid={{args.akid}}&zip={{args.zip}}">{{ event.title }}</a>
-			</div>
-		{% else %}
-			<div class="event-title">
-				<a class="event-link" href="/event/{{ campaign.local_name }}/{{event.id}}/signup/?akid={{args.akid}}&zip={{args.zip}}">{{ campaign.title }}</a>
-			</div>		
 		{% endif %}
-			<span class="event-time">
-				{% if page.lang.iso_code == "en" %}
-					{{ event.starts_at }}
-				{% elif page.lang.iso_code == "fr" %}
-					{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
-				{% elif page.lang.iso_code == "pt" %}
-					{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
-				{% elif page.lang.iso_code == "es" %}
-					{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
-				{% elif page.lang.iso_code == "de" %}
-					{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
-				{% else %}
-					{{ event.obj.starts_at|date:"Y-n-d, H:i" }}
-				{% endif %}</span>	
-		{% if campaign.show_venue and event.venue %}
-			<span class="event-venue">{{ event.venue }}</span>
-		{% endif %}
-		<span class="event-location">
-		{% if campaign.show_address1 %}
-			<div class="event-address1">{{ event.address1 }}</div>
-		{% endif %}
-		{% if campaign.show_city or campaign.show_state or campaign.show_zip %}
-			{% if campaign.show_zip %}
-			<div class="event-city-etc">{{ event.city_etc }}</div>
+<ul id="event_search_results_event_list" class="events nobullet">
+		{% comment %}
+			{% if args.zip %}
+	<h4 class="meta opacity-50 margin-bottom-medium">{% filter ak_text:"event_search_results_zip" %}Events found near:{% endfilter %} {{args.zip}}:</h5>
 			{% else %}
-			<div class="event-city-etc">{{ event.city_etc_no_postal }}</div>
+	<h4 class="meta opacity-50 margin-bottom-medium">{% filter ak_text:"event_search_results_heading" %}Events:{% endfilter %}</h5>
+			{% endif
+		{% endcomment %}
+		{% for event in events %}
+	<li data-event_id="{{ event.id }}" class="event margin-bottom-large">
+		<a class="area-link event-link" href="/event/{{ campaign.local_name }}/{{event.id}}/signup/?akid={{args.akid}}&zip={{args.zip}}">
+			<div class="event-info margin-bottom-normal">
+				<p class="event-title text-style-lead3 text-large3 margin-bottom-small">
+					<span class="text-strong text-blue area-link-hover">{% if campaign.use_title and campaign.show_title %} {{ event.title }} {% else %} {{ campaign.title }} {% endif %}</span>
+				</p>
+				<div class="event-time text-strong">
+			{% if page.lang.iso_code == "en" %}
+				{{ event.starts_at }}
+			{% elif page.lang.iso_code == "fr" %}
+				{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
+			{% elif page.lang.iso_code == "pt" %}
+				{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
+			{% elif page.lang.iso_code == "es" %}
+				{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
+			{% elif page.lang.iso_code == "de" %}
+				{{ event.obj.starts_at|date:"d-n-Y, H : i" }}
+			{% else %}
+				{{ event.obj.starts_at|date:"Y-n-d, H:i" }}
 			{% endif %}
-		{% endif %}
-		</span>
-		{% if event.custom_fields.event_facebook_id and event.custom_fields.event_facebook_id != "none" %}
-			<div><a style="text-decoration: none; border-bottom: none" href="https://www.facebook.com/{{ event.custom_fields.event_facebook_id }}"><img style="max-height: 40px; margin-top: 5px;" src="https://s3.amazonaws.com/s3.350.org/images/RSVP-with-Facebook_trans.png"></a></div>
-		{% endif %}
-		{% if campaign.show_address1 %}{% else %}
-			<div class="event-address-hidden note">{% filter ak_text:"event_search_results_address_hidden_until_rsvp" %}(We'll show you the exact address once you RSVP){% endfilter %}</div>
+				</div>
+			{% if campaign.show_venue and event.venue %}
+				<div class="event-venue">{{ event.venue }}</div>
 			{% endif %}
-		{% if event.distance|is_nonblank %}
-			<span class="event-distance">{{ event.distance_str }}</span>
-		{% endif %}
-		{% if campaign.show_attendee_count %}
-			<span class="event-attendee-count">{% filter ak_text:"event_search_results_attending" %}Attending:{% endfilter %} {{ event.attendee_count }}</span>
-		{% endif %}
-		</div>
-		{% if campaign.show_public_description %}
-			{% autoescape off %}
-		<span class="event-description">{{ event.public_description }}</span>
-			{% endautoescape %}
-		{% endif %}
-
-		{% if campaign.show_directions %}
-		<span class="event-directions">{{ event.directions }}</span>
-		{% endif %}		
+				<div class="event-location">
+			{% if campaign.show_address1 %}
+					<span class="event-address1">{{ event.address1 }}</span>
+			{% endif %}
+			{% if campaign.show_city or campaign.show_state or campaign.show_zip %}
+				{% if campaign.show_zip %}
+					<span class="event-city-etc">{{ event.city_etc }}</span>
+				{% else %}
+					<span class="event-city-etc">{{ event.city_etc_no_postal }}</span>
+				{% endif %}
+			{% endif %}
+				</div>
+			{% if event.custom_fields.event_facebook_id and event.custom_fields.event_facebook_id != "none" %}
+				<div><a href="https://www.facebook.com/{{ event.custom_fields.event_facebook_id }}" class="button-share-medium bg-facebook-color bg-facebook-icon">RSVP on Facebook</a></div>
+			{% endif %}
+			{% if campaign.show_address1 %}{% else %}
+				<div class="event-address-hidden note">{% filter ak_text:"event_search_results_address_hidden_until_rsvp" %}(We'll show you the exact address once you RSVP){% endfilter %}</div>
+			{% endif %}
+			{% if event.distance|is_nonblank %}
+				<div class="event-distance">{{ event.distance_str }}</div>
+			{% endif %}
+			{% if campaign.show_attendee_count %}
+				<div class="event-attendee-count">{% filter ak_text:"event_search_results_attending" %}Attending:{% endfilter %} {{ event.attendee_count }}</div>
+			{% endif %}
+			</div>
+			{% if campaign.show_public_description %}
+				{% autoescape off %}
+			<div class="event-description text-small opacity-50">{{ event.public_description }}</div>
+				{% endautoescape %}
+			{% endif %}
+			{% if campaign.show_directions %}
+			<div class="event-directions">{{ event.directions }}</div>
+			{% endif %}
+		</a>
 	</li>
-{% endfor %}
+		{% endfor %}
 </ul>
+	{% endif %}
 {% endif %}
-{% endif %}
+
 {% if errors|length %}
 <ul class="compact" id="ak-errors">
-{% for key,val in errors.items %}
-<li>{{ val|nth:0 }}</li>
-{% endfor %}
+	{% for key,val in errors.items %}
+	<li>{{ val|nth:0 }}</li>
+	{% endfor %}
 </ul>
 {% endif %}
 
@@ -122,10 +117,14 @@ var evSource = $.urlParam('source');
 console.log( evSource );
 
 $(document).ready(function(){
+
 	$('a.event-link').each(function(){
 		var evLinkHref = $(this).attr('href')
 		var evNewLink = ( evLinkHref + '&source=' + evSource )
 		$(this).attr('href', evNewLink );
+	});
+	$(".event-signup a.event").removeAttr('href').click(function(e){
+		e.preventDefault();
 	});
 
 });
