--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
 <section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c6{% endif %} ct10 cm10 c-wide">
-			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}</a> 
+			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}</a>
 			{% if page.custom_fields.page_pretitle %}
 			<p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
 			{% endif %}
@@ -25,9 +25,9 @@
 		{% if page.custom_fields.page_layout_style == "expanded" %}
 		</div>
 		{% endif %}
-		
-		
-		<div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-readmore-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
+
+
+		<div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
 		{% autoescape off %}
 			{% include_tmpl form.introduction_text %}
 		{% endautoescape %}
@@ -60,12 +60,12 @@
 			{% if page.custom_fields.form_additional_fields %}
 				<div class="form-additional-html">
 					{{ page.custom_fields.form_additional_fields }}
-				</div>	
+				</div>
 			{% endif %}
 			<div class="input-wrapper input-submit">
 				<input type="submit" class="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}" />
 			</div>
-			
+
 			<div id="action-toc" class="text-small icon-before icon-faded" data-icon="&#xE93E;">
 				{% if page.custom_fields.form_short_toc %}
 					{{ page.custom_fields.form_short_toc }}
@@ -78,11 +78,11 @@
 				{% endif %}
 			</div>
 		</form>
-		{% include "./social_plugins.html" %}		
+		{% include "./social_plugins.html" %}
 		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
 			{% include "./recentactions.html" %}
 		</div>
 	{% endif %}
 	</div>
 </section>
-{% endblock %}		
+{% endblock %}
